# DEIS2020

./: Action_message_convert.py  KeyPublisher.py  KeySubscriber.py  README.md  calibrationCoefficients_plex.yaml  follower.py  package.xml  serdrive.ino  setup (1).py  sparkieCalibration3.pckl  test_galya_mar10a.ino
experiment/: package.xml  ros2.txt  setup.cfg  setup.py  vel.py  velocity.ino
experiment/deis_py_dev/: KeyPublisher.py  KeySubscriber.py  calibCamera.py  drone.py  emergency.py  follower.py  follower_old.py  imu.py  main.py  notifier.py  odometer.py  sparkie.py  teleop.py  teleop.py.save  teleop_C.py  teleop_cmd.py  tello.py
experiment/launch/: adjust_speed_laptop_launch.py  adjust_speed_putty_launch.py  cruise_leader_launch.py  launch.txt  sparkie_foll_launch.py  sparkie_launch.py
